[project]
name = "ragtools"
version = "0.2.3.3"
description = "Tools for RAG apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "psutil",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "chromadb",
    "langchain-chroma",
    "pypdf",
]